# Meta

./: .gitignore  AUTHENTICATION_FLOW_DIAGRAM.md  BUILD.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_VERIFICATION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_ENV_SETUP.md  README.md  package-lock.json  package.json  render.yaml  reproduce_registration_failure.py
backend/: .env  .env.example  .env.production  .gitignore  DEPLOY_SECRETS.md  Dockerfile  ERROR_HANDLING_GUIDE.md  FINAL_SUMMARY.md  FINAL_TASK_COMPLETION_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  METAJUNGLE_API.md  Makefile  OPENAPI_DOCUMENTATION.md  PROJECT_STRUCTURE.md  README.md  REMAINING_TASKS_SUMMARY.md  SENTRY_SETUP.md  SETUP.md  TASKS_10.4_TO_11.4_SUMMARY.md  TASK_10.1_VERIFICATION.md  TASK_10.2_IMPLEMENTATION_SUMMARY.md  TASK_10.2_QUICK_REFERENCE.md  TASK_10.3_IMPLEMENTATION_SUMMARY.md  TASK_10.3_QUICK_REFERENCE.md  TASK_10.4_QUICK_REFERENCE.md  TASK_10.4_VERIFICATION.md  TASK_11.1_IMPLEMENTATION_SUMMARY.md  TASK_11.1_QUICK_REFERENCE.md  TASK_11.2_IMPLEMENTATION_SUMMARY.md  TASK_11.2_VERIFICATION.md  TASK_11.3_IMPLEMENTATION_SUMMARY.md  TASK_12_CHECKPOINT_REPORT.md  TASK_18.1_IMPLEMENTATION_SUMMARY.md  TASK_18.2_REQUEST_LOGGING_SUMMARY.md  TASK_18.3_ERROR_TRACKING_SUMMARY.md  TASK_18.4_QUICK_REFERENCE.md  TASK_18.4_RATE_LIMITING_SUMMARY.md  TASK_19_CHECKPOINT_VERIFICATION.md  TASK_19_SUMMARY.md  TASK_1_COMPLETION.md  (+17 more)
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  main.py
backend/scripts/: create_admin.py  reset_admin_password.py  seed_metajungle.py  setup.sh  (+1 more)
(+225 files in other folders)
